test/files/parser/errors/call.otest
name = "Call with improper input format"
line = 2
character = 12
error = 'Expected ":" after input name, but received ")".'

---

sine(volume)

---

name = "Call input specified twice"
line = 2
character = 17
error = 'Input "volume" specified more than once for function "sine".'

---

sine(volume: 1, volume: 1)
